PM-1191 API to generate MAC created
